[gd_scene load_steps=3 format=3 uid="uid://b2h1ca3cqqefc"]

[ext_resource type="Script" uid="uid://cf0187ttamg5s" path="res://SYSTEMS/HITBOX|HURTBOX/hurtbox.gd" id="1_7g4t2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o8ux5"]
radius = 8.0

[node name="hurtbox" type="Area2D"]
script = ExtResource("1_7g4t2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_o8ux5")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
